--- a/graphql_views.info.yml
+++ b/graphql_views.info.yml
@@ -5,6 +5,6 @@ package: GraphQL
 core: 8.x
 core_version_requirement: ^8 || ^9 || ^10
 dependencies:
-  - graphql:graphql_core
+  - graphql:graphql
   - drupal:views
   - drupal:system (>=8.4)
